--- a/index.html
+++ b/index.html
@@ -51,5 +51,11 @@
         <br>[1.0, 1.0, 1.0] 
         <br>[1.0, 1.0, 1.0] 
         <br>[1.0, 1.0, 1.0] 
+        <br>Полезные ссылки:
+        <ul>
+            <li><a href='https://www.youtube.com/watch?v=FyTL1bnUx5I&list=PLA0M1Bcd0w8xO_39zZll2u1lz_Q-Mwn1F&pp=iAQB'>Django</a></li>
+            <li><a href='https://www.youtube.com/watch?v=TwnCXdCa8qg&list=PLA0M1Bcd0w8x4Inr5oYttMK6J47vxgv6J&pp=iAQB'>SQlite3</a></li>
+            <li><a href='https://www.youtube.com/watch?v=eDuuKvIWzew&list=PLA0M1Bcd0w8zmegfAUfFMiACPKfdW4ifD&pp=iAQB'>Numpy</a></li>
+        </ul>
     </body>
 </html>
