--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <br>[0.0, 1.0, 0.0]
         <br>[1.0, 0.0, 1.0]
         <h4>Пример №6</h4>
-        <img src="joker6.png">
+        <a href="scrolls.html"><img src="joker6.png"></a>
         <br>[1.0, 1.0, 1.0] 
         <br>[1.0, 1.0, 1.0] 
         <br>[1.0, 1.0, 1.0] 
